--- a/styling.css
+++ b/styling.css
@@ -50,7 +50,8 @@
   text-align: center;
 }
 
-.zombies_header_login img {
+.zombies_header_login img,
+.zombies_header_registration img {
   border-radius: 15px;
   border: solid red 3px;
   width: auto;
@@ -194,7 +195,10 @@ canvas {
   font-size: 20px;
   font-weight: bold;
 }
-.login_body {
+.login_body,
+.registration_body {
+  min-width: 1280px;
+  max-width: 1280px;
   background-image: url("Media/full_view_mall.jpg");
   background-repeat: no-repeat;
 }
@@ -211,6 +215,25 @@ canvas {
 .game_profile_table td,
 .game_profile_table th {
   text-align: center;
+}
+hr {
+  border: none;
+  border-top: 3px double red;
+  color: black;
+  overflow: visible;
+  width: 200px;
+  text-align: center;
+  height: 5px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+hr:after {
+  background: #fff;
+  content: "or";
+  padding: 0 4px;
+  position: relative;
+  top: -13px;
 }
 
 @media only screen and (max-width: 880px) {
