--- a/styling.css
+++ b/styling.css
@@ -30,6 +30,7 @@
 .zombies_body_gameplay_container {
   margin: 0 auto;
   width: 1200px;
+  min-width: 1200px;
   height: 800px;
   border: solid red 3px;
   border-radius: 15px;
@@ -95,6 +96,8 @@ br {
 
 canvas {
   border-radius: 12px;
+  min-width: 1200px;
+  height: 800px;
 }
 .error_text {
   font-weight: bold;
@@ -234,6 +237,59 @@ hr:after {
   padding: 0 4px;
   position: relative;
   top: -13px;
+}
+
+.inventory_modal {
+  display: none;
+  padding-top: 10px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 700px;
+  height: auto;
+  overflow: auto;
+  background-color: lightcoral;
+  border: solid black 2px;
+  border-radius: 15px;
+  opacity: 0.8 !important;
+}
+.inventory_table {
+  margin: auto;
+  margin-top: 30px;
+  margin-bottom: 40px;
+  border: solid 2px black;
+  border-radius: 15px;
+  width: 80%;
+}
+.inventory_table tr,
+.inventory_table th {
+  text-align: center;
+}
+.inventory_table th {
+  text-decoration: underline;
+}
+.inventory_table td {
+  padding: 10px;
+  margin: 5px;
+  text-align: center;
+}
+
+#inventory_close_button {
+  background-color: none;
+  float: right;
+  font-size: 20px;
+  margin-right: 15px;
+}
+
+#inventory_close_button:hover,
+#inventory_close_button:focus {
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.no-items-message {
+  text-align: center;
 }
 
 @media only screen and (max-width: 880px) {
