--- a/styling.css
+++ b/styling.css
@@ -322,3 +322,17 @@ hr:after {
   position: relative;
   padding-right: 20px;
 }
+
+#healthBar, #healthBarContainer {
+    width: 200px;
+    height: 10px;
+    border: 1px solid black;
+    border-radius: 3px;
+    position: relative;
+    left: 0;
+}
+
+#healthBar {
+    position: relative;
+        top: 12px;
+}
