--- a/styling.css
+++ b/styling.css
@@ -115,8 +115,8 @@ br {
 
 canvas {
   border-radius: 12px;
-  min-width: 1200px;
-  height: 800px;
+  min-width: auto;
+  height: auto;
 }
 .error_text {
   font-weight: bold;
